@@ -50,6 +50,8 @@ Tactics
 - Added tactic optimize_heap, analogous to the Vernacular Optimize
   Heap, which performs a major garbage collection and heap compaction
   in the OCaml run-time system.
+- Added tactics unshelve_goals and unshelve_evar that allow focusing on
+  previously shelved goals by name or a given undefined evar term.
 - The tactics "dtauto", "dintuition", "firstorder" now handle inductive types
   with let bindings in the parameters.
 - The tactic "dtauto" now handles some inductives such as
